# infra-aws-cdk

./: .env.dev  .env.hom  .env.prd  .gitignore  README.md
infra/: README.md  app.py  cdk.context.json  conftest.py  environment.py  infra_stack.py  pipeline_stage.py  policies.py  pyproject.toml  stack_step.py
infra/application/: constants.py  database_stack.py  resource_stack.py  steps.py
infra/resources/: deploy_step.py  documentdb.py  ecs.py  parameters_store.py  rds.py  resourse.py  secret_manager.py  utils.py
infra/tests/unit/: test_cdk_hello_stack.py  test_environment.py  test_stages.py
repositories/apache/: docker-compose.yml
